samples/_failures_safe/1761128408_450764_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6bcbc67.c: In function ‘main’:
./samples/SAFE/__tmp_f6bcbc67.c:180:5: error: expected declaration or statement at end of input
  180 |     }
      |     ^
